# types3

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Pipfile  README.md  types3  types3-calc  types3-convert  types3-filter  types3-plot  types3-stat  types3-ui
.github/workflows/: integration-test.yml  rust-test.yml  test.yml
data-format/: README.md  example-samples.csv  example-tokens.csv  example.json
examples/: out1.json
integration-test/: .gitignore  benchmark-calc.sh  test-calc.sh  test-calc2.sh  test-convert.sh  test-plot.sh  test-stat.sh  test-ui.sh  test-version.sh  verify-calc.py
integration-test/calc-expected/: ced-ppceme-chelar-types-vs-tokens-100-corpus.json  ceec-hapaxes-vs-tokens-female.json  ceec-hapaxes-vs-tokens-gender-ity.json  ceec-hapaxes-vs-tokens-gender.json  ceec-hapaxes-vs-tokens-ity.json  ceec-hapaxes-vs-tokens-socmob.json  ceec-hapaxes-vs-tokens-split.json  ceec-hapaxes-vs-tokens.json  ceec-hapaxes-vs-words.json  ceec-samples-vs-tokens.json  ceec-samples-vs-words.json  ceec-split-female.json  ceec-split-gender-ity.json  ceec-split-gender.json  ceec-split-ity.json  ceec-split-socmob.json  ceec-split.json  ceec-tokens-female.json  ceec-tokens-gender-ity.json  ceec-tokens-gender.json  ceec-tokens-ity.json  ceec-tokens-socmob.json  ceec-tokens-vs-tokens-split.json  ceec-tokens-vs-tokens.json  ceec-tokens-vs-words-female.json  ceec-tokens-vs-words-gender-ity.json  ceec-tokens-vs-words-ity.json  (+47 more)
python/: types3-convert.py  types3-plot.py  types3-ui.py  types3-version.py
sample-data/: README.md  ced-ppceme-chelar.json  ceec.json
src/: calc_avg.rs  calc_point.rs  calculation.rs  categories.rs  counter.rs  density_curve.rs  driver.rs  errors.rs  information.rs  input.rs  lib.rs  main.rs  output.rs  parallelism.rs  samples.rs  shuffle.rs  subsets.rs
tests/: integration_test.rs
types3/: types3-plot.py
util/: benchmark.sh  docker-build.sh  docker-test.sh  format.sh  set-version.sh  setup.sh  test-quick.sh  test.sh
(+64 files in other folders)
