[package]
name = "types3"
version = "0.1.4"
authors = ["Jukka Suomela"]
edition = "2021"
description = "Type accumulation curves"
license = "MIT"
readme = "README.md"
repository = "https://github.com/suomela/types3"
default-run = "types3-calc"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
crossbeam-channel = "0.5.13"
is_sorted = "0.1.1"
itertools = "0.13.0"
log = "0.4.21"
num_cpus = "1.16.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rust_xlsxwriter = "0.72.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
